--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -69,4 +69,9 @@ section {
   background-color: #333333; }
   .footer .nav-link,
   .footer .copyright {
-    color: white !important; }
+    color: white !important;
+    font-size: 0.8rem; }
+  .footer .social-item i {
+    font-size: 1.5rem;
+    padding: 0 2rem;
+    color: #ffffff; }
