full page section layout

--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -1,5 +1,6 @@
 section {
-  min-height: 500px;
+  // min-height: 500px;
+  height: 100%;
   width: 100%;
   background-size: cover;
   text-align: center;
@@ -8,7 +9,7 @@ section {
 
   .container {
     padding: 2rem;
-    // margin-bottom: 2rem;
+    margin: 6rem auto;
   }
 
   h1 {
