--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,7 +1,11 @@
 html,
 body,
 #app {
-  height: 100%; }
+  height: 100%;
+  scroll-behavior: smooth; }
+
+.test {
+  border: 2px solid red; }
 
 header {
   position: relative;
@@ -11,6 +15,8 @@ header {
   background-size: cover !important;
   -webkit-background-size: cover !important;
   text-align: center; }
+  header nav .active a {
+    color: lime !important; }
   header .banner {
     display: inline-block;
     vertical-align: middle;
@@ -25,18 +31,26 @@ header {
     header .banner .banner-text {
       color: #ffffff; }
 
-.test {
-  border: 1px solid red; }
+.arrow-container {
+  position: absolute;
+  bottom: 0;
+  margin: auto;
+  width: 100%;
+  text-align: center; }
+  .arrow-container a {
+    margin: auto;
+    color: #ffffff; }
 
 section {
-  min-height: 500px;
+  height: 100%;
   width: 100%;
   background-size: cover;
   text-align: center;
   position: relative;
   padding: 3rem; }
   section .container {
-    padding: 2rem; }
+    padding: 2rem;
+    margin: 6rem auto; }
   section h1 {
     padding-bottom: 2rem; }
 
