--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,6 +1,7 @@
 @import "./_variables.scss";
 @import "./_style.scss";
 @import "./_header.scss";
+@import "./_widgets.scss";
 @import "./_section.scss";
 @import "./_mediaqueries";
 @import "./_footer.scss";
