--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -42,23 +42,29 @@ header {
     color: #ffffff; }
 
 section {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   background-size: cover;
   text-align: center;
   position: relative;
   padding: 3rem; }
-  section .container {
+  section .container-fluid {
     padding: 2rem;
     margin: 6rem auto; }
+    section .container-fluid .flex-col {
+      padding: 2rem; }
   section h1 {
     padding-bottom: 2rem; }
 
 #about {
   background-color: #eeeeee; }
   #about .profile-pic {
-    width: 100%;
-    border-radius: 50%; }
+    max-width: 100%;
+    max-height: 300px;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+  #about #about-content {
+    text-align: justify; }
 
 #skills {
   background-color: #333333; }
