--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -1,5 +1,4 @@
 section {
-  // min-height: 500px;
   min-height: 100%;
   width: 100%;
   background-size: cover;
@@ -39,6 +38,53 @@ section {
 
 #skills {
   background-color: $bg-color-two;
+}
+
+#projects {
+  background-color: $light-color;
+
+  .portfolio-item {
+    position: relative;
+
+    img {
+      width: 100%;
+      display: block;
+    }
+
+    .overlay {
+      position: absolute;
+      padding: inherit;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      opacity: 0;
+      transition: 0.5s ease;
+      background-color: #333333;
+
+      .portfolio-item-meta {
+        color: $light-color;
+        padding: 2rem;
+
+        i {
+          margin: 1rem;
+        }
+      }
+    }
+
+    &:hover {
+      .overlay {
+        opacity: 0.8;
+      }
+    }
+  }
+
+  .list-inline {
+    a {
+      padding: 2rem;
+    }
+  }
 }
 
 #contact {
