--- a/src/styles/scss/_footer.scss
+++ b/src/styles/scss/_footer.scss
@@ -2,7 +2,7 @@ $social-spacing: 2rem;
 $social-size: 1.5rem;
 
 .footer {
-  background-color: $bg-color-two;
+  background-color: $dark-color;
 
   .nav-link,
   .copyright {
