--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,10 +1,12 @@
-$accent-color: #4cd137;
+$light-color: #f0f0f0;
+$grey-color: #b4b6b8;
+$dark-color: #333333;
+$accent-color: #2ecc71;
 
-$bg-color-one: #eeeeee;
-$bg-color-two: #333333;
-
-$light-color: #ffffff;
+$dark-bg: #222222;
 
 $font-size-sm: 0.8rem;
+
+$spacer: 2rem;
 
 $test-border: 2px solid red;
