--- a/src/styles/scss/_header.scss
+++ b/src/styles/scss/_header.scss
@@ -4,16 +4,23 @@ header {
   width: 100%;
   background: url(../../assets/images/header-background.jpg) no-repeat center
     center fixed;
-  // background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-  // url(../../assets/images/header-background.jpg);
   background-size: cover !important;
   -webkit-background-size: cover !important;
   text-align: center;
 
+  .navbar-dark {
+    a {
+      color: $light-color !important;
+    }
+  }
+
   nav {
+    a {
+      color: $light-color !important;
+    }
     .active {
       a {
-        color: lime !important;
+        color: $accent-color !important;
       }
     }
   }
@@ -32,6 +39,10 @@ header {
 
     .banner-text {
       color: $light-color;
+
+      .display-text {
+        font-size: 90px;
+      }
     }
   }
 }
