--- a/src/styles/scss/_style.scss
+++ b/src/styles/scss/_style.scss
@@ -3,6 +3,29 @@ body,
 #app {
   height: 100%;
   scroll-behavior: smooth;
+  font-family: "Karla", sans-serif;
+  font-weight: 400;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Rubik", sans-serif;
+}
+
+.nav-item {
+  font-family: "Karla", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: $font-size-sm;
+}
+
+.bg-dark {
+  background-color: $dark-bg !important;
 }
 
 .test {
