--- a/src/styles/scss/_widgets.scss
+++ b/src/styles/scss/_widgets.scss
@@ -1,8 +1,10 @@
 .arrow-container {
   position: absolute;
   bottom: 0;
-  margin: auto;
+  left: 0;
+  right: 0;
   width: 100%;
+  margin: 0;
   text-align: center;
 
   a {
