--- a/src/styles/scss/_header.scss
+++ b/src/styles/scss/_header.scss
@@ -41,7 +41,7 @@ header {
       color: $light-color;
 
       .display-text {
-        font-size: 90px;
+        font-size: $title-size;
       }
     }
   }
