--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -6,7 +6,15 @@ $accent-color: #2ecc71;
 $dark-bg: #222222;
 
 $font-size-sm: 0.8rem;
+$title-size: 90px;
 
 $spacer: 2rem;
 
 $test-border: 2px solid red;
+
+$profile-pic-height: 300px;
+$profile-pic-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+  0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+$heading-font: "Rubik", sans-serif;
+$body-font: "Karla", sans-serif;
