--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -7,16 +7,16 @@ section {
   padding: $spacer;
 
   .container-fluid {
-    padding: 2rem;
+    padding: $spacer;
     margin: 6rem auto;
 
     .flex-col {
-      padding: 2rem;
+      padding: $spacer;
     }
   }
 
   h1 {
-    padding-bottom: 2rem;
+    padding-bottom: $spacer;
   }
 }
 
@@ -41,10 +41,15 @@ section {
 #about {
   .profile-pic {
     max-width: 100%;
-    max-height: 300px;
+    max-height: $profile-pic-height;
     border-radius: 50%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: $profile-pic-shadow;
   }
+
+  .tagline {
+    font-size: 1.5rem;
+  }
+
   #about-content {
     text-align: justify;
   }
