--- a/src/styles/scss/_style.scss
+++ b/src/styles/scss/_style.scss
@@ -3,7 +3,7 @@ body,
 #app {
   height: 100%;
   scroll-behavior: smooth;
-  font-family: "Karla", sans-serif;
+  font-family: $body-font;
   font-weight: 400;
 }
 
@@ -14,11 +14,16 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "Rubik", sans-serif;
+  font-family: $heading-font;
+}
+
+p {
+  font-family: $body-font;
+  font-weight: 300;
 }
 
 .nav-item {
-  font-family: "Karla", sans-serif;
+  font-family: $body-font;
   text-transform: uppercase;
   font-weight: 600;
   font-size: $font-size-sm;
