--- a/src/styles/scss/_header.scss
+++ b/src/styles/scss/_header.scss
@@ -43,6 +43,9 @@ header {
       .display-text {
         font-size: $title-size;
       }
+      #typewriter {
+        font-size: $subtitle-size;
+      }
     }
   }
 }
