--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,5 +1,5 @@
 $light-color: #f0f0f0;
-$grey-color: #b4b6b8;
+$grey-color: #747474;
 $dark-color: #333333;
 $accent-color: #2ecc71;
 
@@ -7,6 +7,7 @@ $dark-bg: #222222;
 
 $font-size-sm: 0.8rem;
 $title-size: 90px;
+$subtitle-size: 50px;
 
 $spacer: 2rem;
 
