--- a/src/styles/scss/_style.scss
+++ b/src/styles/scss/_style.scss
@@ -17,6 +17,12 @@ h3 {
   font-family: $heading-font;
 }
 
+h3 {
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  color: $grey-color;
+}
+
 p {
   font-family: $body-font;
   font-weight: 300;
