--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -10,6 +10,7 @@ $title-size: 90px;
 $subtitle-size: 50px;
 
 $spacer: 2rem;
+$spacer-sm: 1rem;
 
 $test-border: 2px solid red;
 
@@ -19,3 +20,12 @@ $profile-pic-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
 
 $heading-font: "Rubik", sans-serif;
 $body-font: "Karla", sans-serif;
+
+$level-high-1: #38efc7;
+$level-high-2: #38ef7d;
+
+$level-medium-1: #f12711;
+$level-medium-2: #f5ba19;
+
+$level-low-1: #63fc27;
+$level-low-2: #ffff1c;
