--- a/src/styles/scss/_footer.scss
+++ b/src/styles/scss/_footer.scss
@@ -2,11 +2,16 @@ $social-size: 1.5rem;
 
 .footer {
   background-color: $dark-color;
+  padding: 1rem;
+  color: white !important;
+  font-size: $font-size-sm;
 
-  .nav-link,
-  .copyright {
-    color: white !important;
-    font-size: $font-size-sm;
+  a:hover {
+    color: $accent-color !important;
+  }
+
+  #username {
+    color: $accent-color;
   }
 
   .social-item {
