--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -7,7 +7,7 @@ section {
   padding: $spacer;
 
   .container-fluid {
-    padding: $spacer;
+    padding: $spacer-sm;
     margin: 6rem auto;
 
     .flex-col {
@@ -18,24 +18,32 @@ section {
   h1 {
     padding-bottom: $spacer;
   }
+
+  .list-group-item {
+    background-color: inherit;
+  }
 }
 
 .light-section {
   background-color: $light-color;
   color: $dark-color;
   a {
-    color: $accent-color;
+    color: $dark-color;
+    &:hover {
+      color: $accent-color;
+    }
   }
 }
 
 .dark-section {
   background-color: $dark-color;
   color: $light-color;
-}
-
-.grey-section {
-  background-color: $grey-color;
-  color: $dark-color;
+  a {
+    color: $light-color;
+    &:hover {
+      color: $accent-color;
+    }
+  }
 }
 
 #about {
@@ -52,6 +60,7 @@ section {
 
   #about-content {
     text-align: justify;
+    font-size: 1$spacer-sm;
   }
 }
 
@@ -61,16 +70,26 @@ section {
   }
   .portfolio-container {
     .flex-col {
-      padding: 4rem;
+      padding: $spacer;
     }
   }
 
   .filters {
     margin: 0;
+    .active {
+      color: $accent-color;
+    }
   }
   .portfolio-item {
     position: relative;
-    // padding: 2rem;
+
+    a {
+      text-decoration: none;
+    }
+
+    h3 {
+      font-size: 1.2rem;
+    }
 
     img {
       width: 100%;
@@ -94,14 +113,16 @@ section {
         padding: 2rem;
 
         i {
-          margin: 1rem;
+          margin: $spacer-sm;
         }
       }
     }
 
     &:hover {
       .overlay {
-        opacity: 0.8;
+        opacity: 0.95;
+        border: 2px solid $accent-color;
+        cursor: pointer;
       }
     }
   }
@@ -115,6 +136,116 @@ section {
 
 #contact {
   .social-item {
-    padding: 0 1rem;
+    padding: 0 0.5rem;
+  }
+
+  ul {
+    margin-top: $spacer;
+  }
+}
+
+#skills {
+  padding: $spacer-sm;
+
+  .flex-col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.category {
+  height: 50%;
+  width: 100%;
+  margin-top: $spacer-sm;
+  li {
+    list-style-type: square;
+  }
+}
+
+.skillbars {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.skill {
+  margin: 0.8rem 0;
+  position: relative;
+  width: 22.5em;
+}
+
+.skill-name {
+  font-size: 0.8em;
+  letter-spacing: 0.145em;
+  text-transform: uppercase;
+}
+
+.outer-bar,
+.inner-bar {
+  height: 0.75em;
+}
+
+.outer-bar {
+  margin-top: 1em;
+  background: #333;
+}
+
+.inner-bar {
+  animation: fillBar 1s forwards;
+  transform: scaleX(0);
+  transform-origin: 0 0;
+}
+
+.level--100,
+.level--90 {
+  width: 100%;
+  background: $level-high-1; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    $level-high-2,
+    $level-high-1
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, $level-high-2, $level-high-1);
+}
+
+.level--90 {
+  width: 90%;
+}
+
+.level--80,
+.level--70 {
+  width: 80%;
+  background: $level-medium-1; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    $level-medium-2,
+    $level-medium-1
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, $level-medium-2, $level-medium-1);
+}
+.level--70 {
+  width: 70%;
+}
+.level--60,
+.level--50 {
+  width: 60%;
+  background: $level-low-1; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    $level-low-2,
+    $level-low-1
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, $level-low-2, $level-low-1);
+}
+.level--50 {
+  width: 50%;
+}
+
+@keyframes fillBar {
+  to {
+    transform: scaleX(1);
   }
 }
