--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -3,5 +3,7 @@
 @import "./_header.scss";
 @import "./_widgets.scss";
 @import "./_section.scss";
+@import "./_pages.scss";
+@import "./_skillbars.scss";
 @import "./_mediaqueries";
 @import "./_footer.scss";
